<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name</string>
    <string name="title_login_user_name_hint">Enter your username</string>
    <string name="title_login_password">Password</string>
    <string name="title_save_login_infor">Save Login Info</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure to want to exit?</string>
    <string name="confirm_exit_Yes">Yes</string>
    <string name="confirm_exit_No">No</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_employee_management">Quản lý nhân sự</string>

    <string name="title_healthcare">Health Care</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>

    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_product">Product</string>
    <string name="title_payment">Payment Method</string>
    <string name="title_order">Order</string>
    <string name="title_advanceproduct">AdvanceProduct</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID</string>
    <string name="title_customer_name">Customer Name</string>
    <string name="title_customer_phone">Customer Phone</string>
    <string name="title_customer_email">Customer Email</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>


</resources>