<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        app:srcCompat="@mipmap/ic_logo_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_user_name"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_user_name_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_password"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/title_login_password"/>

    <CheckBox
        android:id="@+id/chkSaveLoginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_save_login_infor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:onClick="do_login"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_login_button_login" />

        <ImageView
            android:onClick="do_exit"
            android:id="@+id/imgExit"
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_exit" />
    </LinearLayout>

</LinearLayout>